<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="@drawable/bgapp"

    >

    <ImageView
        android:layout_width="299dp"
        android:layout_height="299dp"
        android:src="@drawable/whichcarquiz"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"

        />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_game"
        android:textSize="28sp"
        android:layout_gravity="center"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alexandra_suciu_amp_alexandra_surdu"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="16sp"

        />


</LinearLayout>