<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level1"
    android:orientation="vertical"
    android:background="@drawable/bgapp"

    >



    <TextView
        android:id="@+id/textScreen"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkpoint_time"
        android:textSize="22sp"
        android:textColor="#ffffff"

        />

    <ImageView
        android:id="@+id/bigboss"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/icboss"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"

        />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="28sp"
        android:text="@string/well_done_ready_for_next_level"

        />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:textAllCaps="false"
        android:textColor="@color/colorPurple"
        android:text="@string/continue_"
        android:textSize="28sp"
        android:background="@drawable/bgbtn"

        />

    <TextView
        android:id="@+id/textBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:text="@string/back_to_home"

        />

</LinearLayout>