<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level1"
    android:orientation="vertical"
    android:background="@drawable/bgapp"

    >

    <TextView
        android:id="@+id/textScreen"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_fight_battle"
        android:textSize="22sp"
        android:textColor="#ffffff"

        />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/bgquestion"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        >

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:textColor="#332FA2"
            android:lineSpacingExtra="6dp"
            android:text="@string/guess_cars"

            />

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:padding="10dp"
        android:clickable="false"
        android:focusable="false"
        android:textColor="#332FA2"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/bgpurple"

        />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ammo"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:textColor="#ffffff"
        android:textSize="24sp"

        />


    <LinearLayout
        android:id="@+id/layoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"

        >


    </LinearLayout>

</LinearLayout>